@@ -3,7 +3,9 @@ ChangeLog for RQL
 
 2006-11-15  --  0.9.1
     * fix Variable.selected_index()
-
+    * do not raise bad rql query on non selected sorted variable in
+      distinct query since this is supported by erudi's rql engine
+	
 2006-11-14  --  0.9.0
     * proper full/right/left outer join support
     * removed a buggy assertion in stcheck on aggregat function
